新增 Firebase 環境配置，更新 .cursorignore 檔案以包含 Firebase 相關文件，並設置生產環境標誌以提升應用的部署準備性。

--- a/.cursorignore
+++ b/.cursorignore
@@ -64,3 +64,10 @@ tsconfig.json
 tsconfig.spec.json
 src/app/workspace/dock/panelmenu
 src/app/workspace/dock/megamenu
+
+storage.rules
+firestore.rules
+/functions
+/src/assets
+firebase.json
+firestore.indexes.json
