--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,21 @@
     "strictTemplates": true
   },
   "files": [],
+  "baseUrl": "./",
+  "paths": {
+    "@shared": [
+      "src/app/shared/index"
+    ],
+    "@core": [
+      "src/app/core/index"
+    ],
+    "@env/*": [
+      "src/environments/*"
+    ],
+    "@_mock": [
+      "_mock/index"
+    ]
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
