--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@primeuix/themes": "^1.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "chart.js": "^4.4.8",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0-rc.2",
